# MLOps2026

./: README.md  pytest.ini
.github/workflows/: tests.yaml
mlops2026/: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
mlops2026/.devcontainer/: devcontainer.json
mlops2026/.github/workflows/: tests.yaml
mlops2026/configs/: default.yaml
mlops2026/dockerfiles/: api.dockerfile  train.dockerfile
mlops2026/docs/: mkdocs.yaml
mlops2026/docs/source/: index.md
mlops2026/src/vdm_pokemon/: HydraTrain.py  api.py  data.py  model.py  profile.stats  sweep.yaml  train.py  unet.py
mlops2026/src/vdm_pokemon/logging/: train_with_logging.py
mlops2026/tests/: __init__.py  test_data.py  test_model.py  test_unet.py
