[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vdm_pokemon"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "mila_golomozin", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.6.0",
  "typer==0.15.2",
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
  "invoke==2.2.0",
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "coverage==7.8.0",
  "ruff==0.11.6",
  "mypy==1.19.1",
  "mkdocs-material==9.7.1",
  "mkdocstrings-python==2.0.1",
  "numpy>=2.4.1",
]

[project.optional-dependencies]
dev = [
  "invoke==2.2.0",
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "coverage==7.8.0",
  "ruff==0.11.6",
  "mypy==1.19.1",
  "mkdocs-material==9.7.1",
  "mkdocstrings-python==2.0.1",
]

 

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
